--- a/.github/workflows/sync-gitignore.yml
+++ b/.github/workflows/sync-gitignore.yml
@@ -1,7 +1,10 @@
 name: Sync .gitignore from ConfigCommon
 
+permissions:
+  contents: write
+  pull-requests: write
+
 on:
-  # 手動觸發
   workflow_dispatch:
     inputs:
       template_name:
@@ -9,13 +12,8 @@ on:
         required: true
         default: 'unreal-engine.gitignore'
   
-  # 每週檢查一次更新（可選）
   schedule:
-    - cron: '0 2 * * 1'  # 每週一凌晨 2 點
-  
-  # 當 ConfigCommon 有更新時觸發（需要 webhook）
-  repository_dispatch:
-    types: [config-updated]
+    - cron: '0 2 * * 1'
 
 jobs:
   sync-gitignore:
@@ -27,34 +25,51 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Download .gitignore template
+      - name: Set template name
         run: |
           TEMPLATE_NAME="${{ github.event.inputs.template_name || 'unreal-engine.gitignore' }}"
+          echo "TEMPLATE_NAME=$TEMPLATE_NAME" >> $GITHUB_ENV
+          echo "Using template: $TEMPLATE_NAME"
+      
+      - name: Download .gitignore template
+        run: |
           echo "Downloading template: $TEMPLATE_NAME"
           
-          # 下載指定的 .gitignore 範本
-          curl -fsSL \
-            "https://raw.githubusercontent.com/dadavidtseng/ConfigCommon/main/$TEMPLATE_NAME" \
-            -o .gitignore.new
+          # 建立 URL
+          URL="https://raw.githubusercontent.com/dadavidtseng/ConfigCommon/main/$TEMPLATE_NAME"
+          echo "URL: $URL"
           
-          # 檢查檔案是否成功下載
-          if [ ! -s .gitignore.new ]; then
-            echo "Error: Failed to download $TEMPLATE_NAME"
+          # 下載檔案並檢查狀態碼
+          HTTP_CODE=$(curl -w "%{http_code}" -fsSL "$URL" -o .gitignore.new)
+          
+          if [ "$HTTP_CODE" != "200" ]; then
+            echo "Error: HTTP $HTTP_CODE when downloading $TEMPLATE_NAME"
+            echo "URL: $URL"
             exit 1
           fi
           
-          echo "Successfully downloaded $TEMPLATE_NAME"
+          # 檢查檔案是否存在且不為空
+          if [ ! -s .gitignore.new ]; then
+            echo "Error: Downloaded file is empty or doesn't exist"
+            exit 1
+          fi
+          
+          echo "Successfully downloaded $TEMPLATE_NAME ($(wc -l < .gitignore.new) lines)"
+          echo "First few lines:"
+          head -5 .gitignore.new
       
       - name: Check for changes
         id: check_changes
         run: |
           if [ -f .gitignore ]; then
-            if diff -q .gitignore .gitignore.new > /dev/null; then
+            if cmp -s .gitignore .gitignore.new; then
               echo "No changes detected"
               echo "has_changes=false" >> $GITHUB_OUTPUT
             else
               echo "Changes detected"
               echo "has_changes=true" >> $GITHUB_OUTPUT
+              echo "Differences:"
+              diff .gitignore .gitignore.new || true
             fi
           else
             echo "No existing .gitignore, creating new one"
@@ -66,31 +81,31 @@ jobs:
         run: |
           mv .gitignore.new .gitignore
           echo "Updated .gitignore"
+          echo "Final file size: $(wc -l < .gitignore) lines"
       
       - name: Clean up temporary files
         run: |
           rm -f .gitignore.new
       
-      - name: Create Pull Request
+      - name: Commit and push changes
         if: steps.check_changes.outputs.has_changes == 'true'
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: 'chore: update .gitignore from ConfigCommon template'
-          title: 'chore: Update .gitignore template'
-          body: |
-            自動更新 .gitignore 範本檔案
-            
-            - 來源：[ConfigCommon](https://github.com/dadavidtseng/ConfigCommon)
-            - 範本：`${{ github.event.inputs.template_name || 'unreal-engine.gitignore' }}`
-            - 觸發方式：${{ github.event_name }}
-            
-            請檢查變更內容是否正確。
-          branch: update-gitignore
-          delete-branch: true
-      
-      - name: Auto-merge (optional)
-        if: steps.check_changes.outputs.has_changes == 'true' && github.event_name == 'schedule'
         run: |
-          echo "Auto-merge can be implemented here if needed"
-          # gh pr merge --auto --squash
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          
+          git add .gitignore
+          git commit -m "chore: update .gitignore from ConfigCommon template
+
+Source: https://github.com/dadavidtseng/ConfigCommon/blob/main/$TEMPLATE_NAME
+Updated: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
+Triggered by: ${{ github.event_name }}"
+          
+          git push
+      
+      - name: Summary
+        run: |
+          if [ "${{ steps.check_changes.outputs.has_changes }}" == "true" ]; then
+            echo "✅ .gitignore updated successfully"
+          else
+            echo "ℹ️ No changes needed - .gitignore is already up to date"
+          fi
