update: sync-gitignore.yml

--- a/.github/workflows/sync-gitignore.yml
+++ b/.github/workflows/sync-gitignore.yml
@@ -1,4 +1,3 @@
-# 建立正確的 workflow 檔案
 $workflowContent = @'
 name: Sync .gitignore from ConfigCommon
 
@@ -27,51 +26,37 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Set template name
-        run: |
-          TEMPLATE_NAME="${{ github.event.inputs.template_name || 'unreal-engine.gitignore' }}"
-          echo "TEMPLATE_NAME=$TEMPLATE_NAME" >> $GITHUB_ENV
-          echo "Using template: $TEMPLATE_NAME"
-      
       - name: Download .gitignore template
         run: |
+          TEMPLATE_NAME="${{ github.event.inputs.template_name || 'unreal-engine.gitignore' }}"
           echo "Downloading template: $TEMPLATE_NAME"
           
-          # 建立 URL
-          URL="https://raw.githubusercontent.com/dadavidtseng/ConfigCommon/main/$TEMPLATE_NAME"
-          echo "URL: $URL"
+          # 下載指定的 .gitignore 範本
+          curl -fsSL \
+            "https://raw.githubusercontent.com/dadavidtseng/ConfigCommon/main/$TEMPLATE_NAME" \
+            -o .gitignore.new
           
-          # 下載檔案並檢查狀態碼
-          HTTP_CODE=$(curl -w "%{http_code}" -fsSL "$URL" -o .gitignore.new)
-          
-          if [ "$HTTP_CODE" != "200" ]; then
-            echo "Error: HTTP $HTTP_CODE when downloading $TEMPLATE_NAME"
-            echo "URL: $URL"
-            exit 1
-          fi
-          
-          # 檢查檔案是否存在且不為空
+          # 檢查檔案是否成功下載
           if [ ! -s .gitignore.new ]; then
-            echo "Error: Downloaded file is empty or doesn't exist"
+            echo "Error: Failed to download $TEMPLATE_NAME"
+            echo "Checking if file exists..."
+            curl -I "https://raw.githubusercontent.com/dadavidtseng/ConfigCommon/main/$TEMPLATE_NAME"
             exit 1
           fi
           
-          echo "Successfully downloaded $TEMPLATE_NAME ($(wc -l < .gitignore.new) lines)"
-          echo "First few lines:"
-          head -5 .gitignore.new
+          echo "Successfully downloaded $TEMPLATE_NAME"
+          echo "File size: $(wc -l < .gitignore.new) lines"
       
       - name: Check for changes
         id: check_changes
         run: |
           if [ -f .gitignore ]; then
-            if cmp -s .gitignore .gitignore.new; then
+            if diff -q .gitignore .gitignore.new > /dev/null; then
               echo "No changes detected"
               echo "has_changes=false" >> $GITHUB_OUTPUT
             else
               echo "Changes detected"
               echo "has_changes=true" >> $GITHUB_OUTPUT
-              echo "Differences:"
-              diff .gitignore .gitignore.new || true
             fi
           else
             echo "No existing .gitignore, creating new one"
@@ -83,13 +68,12 @@ jobs:
         run: |
           mv .gitignore.new .gitignore
           echo "Updated .gitignore"
-          echo "Final file size: $(wc -l < .gitignore) lines"
       
       - name: Clean up temporary files
         run: |
           rm -f .gitignore.new
       
-      - name: Commit and push changes
+      - name: Commit and push changes directly
         if: steps.check_changes.outputs.has_changes == 'true'
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -98,7 +82,7 @@ jobs:
           git add .gitignore
           git commit -m "chore: update .gitignore from ConfigCommon template
 
-Source: https://github.com/dadavidtseng/ConfigCommon/blob/main/$TEMPLATE_NAME
+Source: https://github.com/dadavidtseng/ConfigCommon/blob/main/${{ github.event.inputs.template_name || 'unreal-engine.gitignore' }}
 Updated: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
 Triggered by: ${{ github.event_name }}"
           
@@ -113,10 +97,7 @@ Triggered by: ${{ github.event_name }}"
           fi
 '@
 
-# 確保目錄存在
-mkdir .github\workflows -Force
-
-# 寫入檔案
-$workflowContent | Out-File -FilePath .github\workflows\sync-gitignore.yml -Encoding UTF8
+# 更新 workflow 檔案
+$workflowContent | Out-File -FilePath .github\workflows\sync-gitignore.yml -Encoding UTF8 -NoNewline
 
 Write-Host "✅ Workflow 檔案已更新"
