--- a/.github/workflows/sync-gitignore.yml
+++ b/.github/workflows/sync-gitignore.yml
@@ -5,7 +5,57 @@ permissions:
 
 on:
   workflow_dispatch:
-
+    inputs:
+      sync_gitignore:
+        description: '同步 .gitignore'
+        required: false
+        default: true
+        type: boolean
+      gitignore_source:
+        description: '.gitignore 來源檔案名稱'
+        required: false
+        default: 'unreal-engine.gitignore'
+        type: string
+      
+      sync_gitattributes:
+        description: '同步 .gitattributes'
+        required: false
+        default: true
+        type: boolean
+      gitattributes_source:
+        description: '.gitattributes 來源檔案名稱'
+        required: false
+        default: 'unreal-engine.gitattributes'
+        type: string
+      
+      sync_editorconfig:
+        description: '同步 .editorconfig'
+        required: false
+        default: true
+        type: boolean
+      editorconfig_source:
+        description: '.editorconfig 來源檔案名稱'
+        required: false
+        default: '.editorconfig'
+        type: string
+      
+      sync_clangformat:
+        description: '同步 .clang-format'
+        required: false
+        default: false
+        type: boolean
+      clangformat_source:
+        description: '.clang-format 來源檔案名稱'
+        required: false
+        default: '.clang-format'
+        type: string
+      
+      additional_files:
+        description: '額外檔案 (格式: 本地檔案:遠端檔案，用逗號分隔)'
+        required: false
+        default: ''
+        type: string
+  
   schedule:
     # 每週一凌晨 2 點執行
     - cron: '0 2 * * 1'
@@ -13,7 +63,7 @@ on:
 jobs:
   sync-config-files:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -23,15 +73,33 @@ jobs:
       - name: Download and sync config files
         id: sync_files
         run: |
-          # 定義要同步的檔案清單
-          # 格式: "本地檔案名:遠端檔案名"
-          FILES=(
-            ".gitignore:unreal-engine.gitignore"
-            ".gitattributes:unreal-engine.gitattributes"
-#            ".editorconfig:.editorconfig"
-#            ".clang-format:.clang-format"
-            # 在這裡加入更多檔案
-          )
+          # 建立檔案清單
+          FILES=()
+          
+          # 根據輸入參數加入檔案
+          if [ "${{ github.event.inputs.sync_gitignore || 'true' }}" = "true" ]; then
+            FILES+=(".gitignore:${{ github.event.inputs.gitignore_source || 'unreal-engine.gitignore' }}")
+          fi
+          
+          if [ "${{ github.event.inputs.sync_gitattributes || 'true' }}" = "true" ]; then
+            FILES+=(".gitattributes:${{ github.event.inputs.gitattributes_source || 'unreal-engine.gitattributes' }}")
+          fi
+          
+          if [ "${{ github.event.inputs.sync_editorconfig || 'true' }}" = "true" ]; then
+            FILES+=(".editorconfig:${{ github.event.inputs.editorconfig_source || '.editorconfig' }}")
+          fi
+          
+          if [ "${{ github.event.inputs.sync_clangformat || 'false' }}" = "true" ]; then
+            FILES+=(".clang-format:${{ github.event.inputs.clangformat_source || '.clang-format' }}")
+          fi
+          
+          # 處理額外檔案
+          if [ -n "${{ github.event.inputs.additional_files }}" ]; then
+            IFS=',' read -ra EXTRA_FILES <<< "${{ github.event.inputs.additional_files }}"
+            for file in "${EXTRA_FILES[@]}"; do
+              FILES+=("$file")
+            done
+          fi
           
           BASE_URL="https://raw.githubusercontent.com/dadavidtseng/ConfigCommon/main"
           CHANGED_FILES=""
@@ -41,9 +109,13 @@ jobs:
           for FILE_PAIR in "${FILES[@]}"; do
             # 分割本地和遠端檔案名
             IFS=':' read -r LOCAL_FILE REMOTE_FILE <<< "$FILE_PAIR"
-          
+            
+            # 移除前後空格
+            LOCAL_FILE=$(echo "$LOCAL_FILE" | xargs)
+            REMOTE_FILE=$(echo "$REMOTE_FILE" | xargs)
+            
             echo "Processing $LOCAL_FILE (from $REMOTE_FILE)"
-          
+            
             # 下載檔案
             SUCCESS=false
             if curl -fsSL "$BASE_URL/$REMOTE_FILE" -o "${LOCAL_FILE}.temp"; then
@@ -52,13 +124,13 @@ jobs:
                 SUCCESS=true
               fi
             fi
-          
+            
             if [ "$SUCCESS" = false ]; then
               echo "Failed to download $REMOTE_FILE, skipping..."
               rm -f "${LOCAL_FILE}.temp"
               continue
             fi
-          
+            
             # 檢查變更
             if [ -f "$LOCAL_FILE" ]; then
               if ! cmp -s "$LOCAL_FILE" "${LOCAL_FILE}.temp"; then
