feat: `FooLevel.umap`

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/FooLevel.FooLevel
+EditorStartupMap=/Game/FooLevel.FooLevel
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
