refactor: rename project

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/FooLevel.FooLevel
-EditorStartupMap=/Game/FooLevel.FooLevel
+GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -65,10 +64,10 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/FooCpp")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/FooCpp")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/FooCpp")
-+ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/FooCpp")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/DaevaCalculator")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/DaevaCalculator")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/DaevaCalculator")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/DaevaCalculator")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
