--- a/DaevaCalculator.uproject
+++ b/DaevaCalculator.uproject
@@ -5,7 +5,7 @@
   "Description": "",
   "Modules": [
     {
-      "Name": "FooCpp",
+      "Name": "DaevaCalculator",
       "Type": "Runtime",
       "LoadingPhase": "Default"
     },
